# ProjGeneral

./: CMakeLists.txt  ParceDecimal.cpp  ParceDecimal.h  ProjGlobal.cpp  ProjGlobal.h  README.md  conanfile.txt
ParceDecimal/: ParceDecimal.h
